alignment fixed

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 .my-font { 
   font-family:Arial, Helvetica, sans-serif; 
   font-size: 15px;
+  text-align: justify;
 }
 
 html { 
